--- a/RProject/RProject.csproj
+++ b/RProject/RProject.csproj
@@ -65,6 +65,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="MainWindow_Double.cs" />
+    <Compile Include="MainWindow_Group.cs" />
     <Compile Include="RCommand.cs" />
     <Compile Include="SelectTime.xaml.cs">
       <DependentUpon>SelectTime.xaml</DependentUpon>
